Fixed added paragraphs wrapping and extended validation limit

--- a/src/components/Comment/Comments.module.scss
+++ b/src/components/Comment/Comments.module.scss
@@ -24,8 +24,5 @@
 @media screen and (max-width: 500px) {
 	.comment__details {
 		flex-direction: column;
-		p {
-			word-wrap: break-word;
-		}
 	}
 }
