--- a/src/components/Homepage/Homepage.module.css
+++ b/src/components/Homepage/Homepage.module.css
@@ -3,6 +3,10 @@
   font-family: 'Roboto Mono', monospace;
 }
 
+* p {
+  word-wrap: break-word;
+}
+
 .homepage__container {
   display: -webkit-box;
   display: -ms-flexbox;
